WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212630
macCatalyst: WKWebView's tint color is not propagated to Web Content process
https://bugs.webkit.org/show_bug.cgi?id=212630
Summary
macCatalyst: WKWebView's tint color is not propagated to Web Content process
Tim Horton
Reported
2020-06-02 01:51:24 PDT
macCatalyst: WKWebView's tint color is not propagated to Web Content process
Attachments
Patch
(6.04 KB, patch)
2020-06-02 01:51 PDT
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-06-02 01:51:49 PDT
Created
attachment 400797
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2020-06-02 01:52:16 PDT
<
rdar://problem/63865456
>
Tim Horton
Comment 3
2020-06-02 10:15:10 PDT
https://trac.webkit.org/changeset/262429/webkit
Darin Adler
Comment 4
2020-06-02 10:18:45 PDT
Comment on
attachment 400797
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=400797&action=review
> Source/WebKit/WebProcess/WebPage/WebPage.h:1571 > + void setTintColor(WebCore::Color);
Since extended colors are reference counted, it seems slightly better to use const WebCore::Color& here.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug