Source/WebKit/Shared/WebPageCreationParameters.h
@@ -174,6 +174,9 @@ struct WebPageCreationParameters {
     bool smartInsertDeleteEnabled;
     Vector<String> additionalSupportedImageTypes;
 #endif
+#if ENABLE(TINT_COLOR_SUPPORT)
+    WebCore::Color tintColor;
+#endif
 #if USE(WPE_RENDERER)
     IPC::Attachment hostFileDescriptor;
 #endif
